# mast_project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Corresponder.h  Makefile  ReadMe.md  SFMgraph.cpp  SFMgraph.h  cmake_install.cmake
MAST_slides/: g2o.vsd  g2o_node_edge.vsd  measurement_process.vsd  optimization procedure.vsd
cmake/: FindEigen3.cmake
doc/: Init_trajectory.vsd  Local_init.vsd  measurement_model.vsd
include/core/: Corresponder.h  Frame_Classes.h  ImageSim.h  Initilizer.h  SFMgraph.h
include/types/: JPL7.h
include/util/: quat_ops.h  settings.cpp~
src/: main.cpp
src/core/: Corresponder.cpp  Frame_Classes.cpp  ImageSim.cpp  Initilizer.cpp  SFMgraph.cpp
src/types/: JPL16.h~  JPL7.cpp
types/: JPL7.cpp  JPL7.h
util/: quat_ops.h
